v1.3.0:
  Update for facter 1.7
  Add ability to specify audit module in server (and optionally send to logstash with beaver)
  Agent and client packages are now passed via parameter rather than hard coded
v1.2.1:
  Fixed subscribe bug on Service['mcollective']
v1.2.0:
  Remove params class
  Move to parameterized class
  Rename templates to .erb
v1.1.4:
  Initial public release