@@ -1,13 +1,7 @@
 require 'spec_helper'
 
 describe 'mcollective::client', :type => :class do
-  let(:params) { {
-    :stomp_host => 'stomp',
-    :stomp_user => 'mcollective',
-    :stomp_password => 'password',
-    :psk => 'string',
-    :packages => [ 'mcollective-filemgr-client', 'mcollective-puppet-client']
-  } }
+  let(:params) { { :packages => [ 'mcollective-filemgr-client', 'mcollective-puppet-client'] } }
 
 
   it { should create_class('mcollective::client') }
@@ -16,7 +10,7 @@ describe 'mcollective::client', :type => :class do
     'ensure'  => 'file',
     'mode'    => '0440',
     'owner'   => 'root',
-    'group'   => 'admin' ) }
+    'group'   => 'root' ) }
   it { should contain_file('/etc/bash_completion.d/mco.sh') }
   it { should create_logrotate__file('mcollective-client') }
   it { should contain_package('mcollective-filemgr-client') }
