@@ -1,6 +1,13 @@
 <%=
-    yaml = ["---"]
-    keys = scope.to_hash.keys.reject {|k| k.to_s =~ /(uptime.*|path|timestamp|free|.*password.*|.*psk.*|.*key|sshfp.*)/}
-    keys.sort.each {|k| yaml << "#{k}: #{scope.lookupvar(k).to_s}"}
-    yaml.join("\n   ")
+    # remove dynamic facts
+    obj = scope.to_hash.reject {|k,v| k.to_s =~ /^(uptime.*|rubysitedir|_timestamp|memoryfree.*|swapfree.*|title|name|caller_module_name|module_name|path|sshfp_*)$/ }
+
+    arr = obj.sort
+    out = "---\n"
+    arr.each do |element|
+      entry = {element[0] => element[1]}
+      out += entry.to_yaml.to_a[1..-1].join + "\n"
+    end
+
+    out
 %>
